# sites-entreprenais-com

./: .bazelrc  .gitignore  ARCHITECTURE.md  BUILD.bazel  CNAME  MODULE.bazel  index.html
.github/workflows/: auto-build.yml  bazel-build.yml  build-site.yml  crawl-stores.yml  deploy.yml  template-build.yml
_astro/: _id_.B1O8COXs.css  _id_.B6xB0Naz.css  _id_.BU9H2LVp.css  _id_.BYPALCs3.css  _id_.Cdw81GaA.css  _id_.CuYAFeHG.css  _id_.CwTcVJln.css  _id_.DjYOPriy.css
bazel/: BUILD.bazel  astro_site.bzl  build_astro_site.sh
cities/: index.html
cities/32525/: index.html
data/: crawl-targets.sample.csv
data/cities/: 32525.json  BUILD.bazel
data/crawl-targets/: README.md  ebisu.csv
foodre/: index.html
foodre/100000000037/: index.html
foodre/100000000045/: index.html
foodre/100000000097/: index.html
foodre/100000000117/: index.html
foodre/100000000121/: index.html
foodre/100000000163/: index.html
foodre/100000000185/: index.html
foodre/100000000200/: index.html
foodre/100000000267/: index.html
foodre/100000000268/: index.html
foodre/100000000274/: index.html
foodre/100000000275/: index.html
foodre/100000000287/: index.html
foodre/100000000293/: index.html
foodre/100000000347/: index.html
foodre/100000000403/: index.html
foodre/100000000444/: index.html
foodre/100000000445/: index.html
foodre/100000000472/: index.html
foodre/100000000517/: index.html
foodre/100000000536/: index.html
foodre/100000000700/: index.html
foodre/100000000703/: index.html
foodre/100000000720/: index.html
foodre/100000000775/: index.html
foodre/100000000880/: index.html
foodre/100000000881/: index.html
foodre/100000000886/: index.html
foodre/100000001176/: index.html
foodre/100000001245/: index.html
foodre/100000001260/: index.html
foodre/100000001262/: index.html
foodre/100000001297/: index.html
foodre/100000001314/: index.html
foodre/100000001425/: index.html
foodre/100000001437/: index.html
foodre/100000001561/: index.html
foodre/100000001670/: index.html
foodre/100000001713/: index.html
foodre/100000001970/: index.html
foodre/100000002062/: index.html
foodre/100000002133/: index.html
foodre/100000002168/: index.html
foodre/100000002169/: index.html
foodre/100000002315/: index.html
foodre/100000002360/: index.html
foodre/100000002432/: index.html
foodre/100000002534/: index.html
foodre/100000002561/: index.html
foodre/100000002657/: index.html
foodre/100000002781/: index.html
foodre/100000002788/: index.html
scripts/: build_all.sh  build_one.sh  changed_targets.sh  crawl_retty.py  gen_store_builds.py  select_template.py  update_sitemap.py  validate_store.py
site-builder/: .gitignore  BUILD.bazel  astro.config.mjs  package-lock.json  package.json  tsconfig.json
site-builder/src/components/: RestaurantPage.astro  RestaurantPageA.astro  RestaurantPageB.astro  RestaurantPageC.astro
site-builder/src/layouts/: BaseLayout.astro  MunicipalityLayout.astro
site-builder/src/lib/: i18n.ts  store.ts
site-builder/src/pages/cities/: [code].astro
site-builder/src/pages/foodre/: [id].astro
site-builder/src/pages/foodre/[id]/menu/: [dish].astro  index.astro
stores/: BUILD.bazel  search-index.json  sitemap.json  store.schema.json
stores/26/100000029426/: BUILD.bazel  store.json
stores/89/100001431389/: BUILD.bazel  store.json
tests/: test_changed_targets.sh
(+36287 files in other folders)
